sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() {
^